ZIA-413 Add workspace management features and update conversation title handling